--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,8 @@ License: GPL-3
 URL: https://github.com/friend1ws/pmsignature
 BugReports: https://github.com/friend1ws/pmsignature/issues
 LazyData: true
-Depends:
-    Rcpp,
+Imports: 
     turboEM
-Imports:
-    Rcpp,
-    turboEM
+LinkingTo: Rcpp
+Suggests: knitr
+VignetteBuilder: knitr
