--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(convertToTurbo_F)
 export(convertToTurbo_Q)
 export(getLogLikelihoodC)
 export(getPMSignature)
+export(readRawMutFile)
 export(updateMstepFC)
 export(updateMstepQC)
 export(updatePMSParam)
