--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,9 @@ License: GPL-3
 URL: https://github.com/friend1ws/pmsignature
 BugReports: https://github.com/friend1ws/pmsignature/issues
 LazyData: true
-Imports: 
+Imports:
     turboEM
 LinkingTo: Rcpp
-Suggests: knitr
+Suggests:
+    knitr
 VignetteBuilder: knitr
