modification on the airplane to Tokyo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,6 @@ export(visPMS_full3)
 export(visPMS_full5)
 export(visPMS_ind5)
 export(visPMS_ind5_dir)
+importFrom(Rcpp,sourceCpp)
+importFrom(turboEM,turboem)
+useDynLib(pmsignature)
