--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ URL: https://github.com/friend1ws/pmsignature
 BugReports: https://github.com/friend1ws/pmsignature/issues
 LazyData: true
 Imports:
-    turboEM
+    turboEM,
+    Rcpp
 LinkingTo: Rcpp
 Suggests:
     knitr
