--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,6 @@ export(visPMS_full3)
 export(visPMS_full5)
 export(visPMS_ind5)
 export(visPMS_ind5_dir)
+export(visPMSignature)
 importFrom(Rcpp,sourceCpp)
 useDynLib(pmsignature)
