organized files a bit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,8 @@ export(convertToTurbo_Q)
 export(getLogLikelihoodC)
 export(getPMSignature)
 export(readBGFile)
-export(readMutFile)
-export(readRawMutfeatFile)
+export(readMFVFile)
+export(readMPFile)
 export(updateMstepFQC)
 export(updatePMSParam)
 export(updateTheta_NormalizedC)
