--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ URL: https://github.com/friend1ws/pmsignature
 BugReports: https://github.com/friend1ws/pmsignature/issues
 LazyData: true
 Imports:
+    ggplot2,
     turboEM,
     Rcpp,
     VariantAnnotation,
