modified for forgoing turboEM package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(convertToTurbo_F)
 export(convertToTurbo_Q)
 export(getLogLikelihoodC)
 export(getPMSignature)
+export(mySquareEM)
 export(readBGFile)
 export(readMFVFile)
 export(readMPFile)
