add documents to simulation.R functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(bootPMSignature)
 export(getBackgroudSignature)
+export(getCosDistance)
 export(getPMSignature)
 export(makeSimData)
 export(readBGFile)
