--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,14 @@
 export(bootPMSignature)
 export(getBackgroudSignature)
 export(getCosDistance)
+export(getMutNum)
 export(getPMSignature)
 export(makeSimData)
 export(readBGFile)
 export(readMFVFile)
 export(readMPFile)
+export(readMPFile_DNP)
+export(visMembership)
 export(visPMSignature)
 importFrom(Rcpp,sourceCpp)
 useDynLib(pmsignature)
