--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ URL: https://github.com/friend1ws/pmsignature
 BugReports: https://github.com/friend1ws/pmsignature/issues
 LazyData: true
 Depends:
-  ggplot2
+  ggplot2,
+  dplyr
 Imports:
     Rcpp,
     GenomicRanges,
