methods for obtaining estimated signature and membership values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(alignmentSignature)
 export(bootPMSignature)
 export(getBackgroudSignature)
 export(getCosDistance)
+export(getMembershipValue)
 export(getMutNum)
 export(getPMSignature)
+export(getSignatureValue)
 export(getSignaturesForMultipleK)
 export(makeSimData)
 export(readBGFile)
