--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ export(readMPFile_DNP)
 export(readMPFile_localMutRate)
 export(visMembership)
 export(visPMSignature)
+exportClasses("")
 importFrom(Rcpp,sourceCpp)
 useDynLib(pmsignature)
