modify getPMSignature manual description

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(readMPFile_DNP)
 export(readMPFile_localMutRate)
 export(visMembership)
 export(visPMSignature)
-exportClasses("")
+exportClasses(EstimatedParameters)
+exportClasses(MutationFeatureData)
 importFrom(Rcpp,sourceCpp)
 useDynLib(pmsignature)
