--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(readMFVFile)
 export(readMPFile)
 export(readMPFile_DNP)
 export(readMPFile_localMutRate)
+export(visCorrelation)
 export(visMembership)
 export(visPMSignature)
 exportClasses(EstimatedParameters)
