--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,4 +32,4 @@ VignetteBuilder: knitr
 Suggests: 
     TxDb.Hsapiens.UCSC.hg19.knownGene, knitr, rmarkdown, BiocStyle,
     testthat,
-    
+    ggvis
