--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: This package is an R implementation of PMSignature (Shiraishi et
     each mutation is associated to one of the mutation signatures. By EM
     algorithm, we jointly estimate the mutation signatures and the membership
     parameters.
-Version: 0.2.0
+Version: 0.2.1
 Authors@R: "Yuichi Shiraishi <friend1ws@gmail.com> [cre]"
 License: GPL-3
 URL: https://github.com/friend1ws/pmsignature
@@ -32,4 +32,5 @@ VignetteBuilder: knitr
 Suggests: 
     TxDb.Hsapiens.UCSC.hg19.knownGene, knitr, rmarkdown, BiocStyle,
     testthat,
+    ggvis
     
