write descirption for getMutMembership function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(bootPMSignature)
 export(getBackgroudSignature)
 export(getCosDistance)
 export(getMembershipValue)
+export(getMutMembership)
 export(getMutNum)
 export(getMutationFeatureVector)
 export(getPMSignature)
