--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(makeSimData)
 export(readBGFile)
 export(readMFVFile)
 export(readMPFile)
+export(readMPFile_DNP)
+export(readMPFile_localMutRate)
 export(visMembership)
 export(visMembership2)
 export(visPMSignature)
